fixing weird image issues on iphone 6

--- a/style2.css
+++ b/style2.css
@@ -345,6 +345,7 @@ div.presentation_summary{
 }
 #gallery div a img{
 	width: 100%;
+	height: auto;
 }
 @media screen and (max-height: 400px){
 	section#motto div {
